# the-coolest

./: code_data.py  data_converted.json  data_converted.jsonl  data_generators.py  data_labeled.json  dataset_test - Лист1.csv  dataset_training - Лист1.csv  main2_faker.py  new_dataset.csv  processed_data.json  pyproject.toml  raw_data_ts.json
code_training/: pyproject.toml  val_data_jsonl.jsonl
code_training/data/: test_raw_data.json  train_data.json  train_nofaulty.json  val_data.json
code_training/scripts/: data_builder.py  reader.py
config_training/data/json_format/: train_data.json  val_nofaulty.json
config_training/data/spacy_format/: dev.spacy
config_training/models/model-best/: config.cfg  meta.json
config_training/scripts/: converter.py  create_config.py  reader.py  trainer.py
data/: airports_rus.csv  autodata.json  data.csv  data4.csv  datafin_context.csv  messages.json  proccessed_data.json  processed_completedata1.json  processed_data.json  processed_data_ts.json  processed_validation_data.json  raw_completedata1.jsonl  raw_data.json  raw_data_ts.json  raw_validation_data.json  train_data.json  val_data.json  val_nofaulty.json
data/json_format/: train_nofaulty.json  val_data.json
data/spacy_format/: train.spacy
history/: training_history.json
models/best_model/: meta.json
models/best_model/ner/: model  moves
scripts/: data_builder.py  data_generators.py  dataset_converter.py  generators.py  history_tracking.py  loc_generators.py  main2_faker.py  parse.py  reader.py  test.py  tester.py  trainer.py
scripts/config/: config.cfg
(+10 files in other folders)
